# pyppl_runners

./: .pre-commit-config.yaml  .tagitrc  .travis.yml  README.md  pyppl_runners.py  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: test_runners.py
