[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_runners"
version = "0.0.3"
description = "More strict check of job success for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "*"
cmdy = "*"
diot = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins.pyppl_runner]
pyppl_runner_dry = "pyppl_runners:dry"
pyppl_runner_ssh = "pyppl_runners:ssh"
pyppl_runner_sge = "pyppl_runners:sge"
pyppl_runner_slurm = "pyppl_runners:slurm"
